modified env.example project

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Containers
-NGINX_PORT=8081
+NGINX_PORT=8085
 PHP_FPM_PORT=9000
 PHP_MY_ADMIN_PORT=8082
 
@@ -17,3 +17,6 @@ MYSQL_ROOT_PASSWORD=password
 
 # Redis
 REDIS_PASSWORD=password
+
+CURRENT_USER=dev
+CURRENT_USER_ID=1000
